# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Admin\CarController;
 use App\Http\Controllers\Admin\CategoryController;
+use App\Http\Controllers\Admin\SliderController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,3 +21,4 @@ use App\Http\Controllers\Admin\CategoryController;
 
 Route::apiResource('categories', CategoryController::class);
 Route::apiResource('cars', CarController::class);
+Route::apiResource('sliders', SliderController::class);
